# comp440-probabilistic-programming

./: .gitignore  README.md  hw2.html
homework-specs/: Homework 1 |.html  Homework 3 |.html
ppl-impl/: .gitignore  Cargo.toml  readme.md  viz.py
ppl-impl/data/: hw2_a_gaussian_unknown_mean copy 2.json  hw2_a_gaussian_unknown_mean copy.json  hw2_a_gaussian_unknown_mean.json  hw2_b_bayesian_linear_regression.json  hw2_c_hidden_markov_model.json  hw2_d_bayesian_neural_network.json  hw3_c_gaussian_mixture.json  hw3_d_sprinkler.json  mat_mul.json  mat_transpose.json
ppl-impl/examples/: addition.ppl  gaussian_mix.ppl  hw2_a_gaussian_unknown_mean.ppl  hw2_b_bayesian_linear_regression.ppl  hw2_c_hidden_markov_model.ppl  hw2_d_bayesian_neural_network.ppl  hw3_c_gaussian_mixture.ppl  hw3_d_sprinkler.ppl  hw3_e_dirac.ppl  log.ppl  mat_add.ppl  mat_mul.ppl  mat_repmat.ppl  mat_tanh.ppl  mat_transpose.ppl  multiplication.ppl  normal.ppl  vector.ppl
ppl-impl/pgms-json/: arithmetic_circuit.pgm.json  hw2_a_gaussian_unknown_mean.pgm.json  hw2_b_bayesian_linear_regression.pgm.json  hw2_c_hidden_markov_model.pgm.json  hw2_d_bayesian_neural_network.pgm.json
ppl-impl/pgms-rendered/: arithmetic_circuit  hw2_a_gaussian_unknown_mean  hw2_b_bayesian_linear_regression  hw2_c_hidden_markov_model  hw2_d_bayesian_neural_network
ppl-impl/src/: ancestral_sampler.rs  ast.rs  built_ins.rs  distributions.rs  functions.rs  grammar.lalrpop  inference.rs  interpreter.rs  main.rs  types.rs
ppl-impl/src/inference/: likelihood_weighting.rs  prior_only.rs  single_site_metropolis.rs
(+20 files in other folders)
