[package]
name = "ppl-impl"
version = "0.1.0"
authors = ["Maxwell Clarke <maxeonyx@gmail.com>"]
edition = "2018"

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = "0.19.5"
regex = "1"
rand = "0.8"
rand_distr = "0.4"

[build-dependencies]
lalrpop = "0.19.5"
