[package]
name = "ppl-impl"
version = "0.1.0"
authors = ["Maxwell Clarke <maxeonyx@gmail.com>"]
edition = "2018"

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = "0.19.5"
regex = "1"
rand = "0.8"
rand_distr = "0.4"
clap = "3.0.0-beta.2"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
probability = "0.17"

[build-dependencies]
lalrpop = "0.19.5"
